Closed
Bug 256455
Opened 21 years ago
Closed 21 years ago
[Mac] Unable to copy from MS Word and paste into message compose body with formatting
Categories
(Thunderbird :: Message Compose Window, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
Thunderbird1.0
People
(Reporter: matthew, Assigned: mscott)
References
Details
Attachments
(1 file)
|
839 bytes,
patch
|
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X; en) AppleWebKit/125.4 (KHTML, like Gecko) Safari/125.9
Build Identifier: version 0.7+ (20040821)
Myself and at least one other person are unable to copy from MS Word and paste into Thunderbird's
mail compose window body under Mac OS X 10.3. We can paste into the subject field, but not the
body. We can however paste into the body by selecting 'Paste Without Formatting' from the Edit menu.
Reproducible: Always
Steps to Reproduce:
1. Create/open WP file in Word and type and copy some text
2. paste into Thunderbird message compose window
Actual Results:
Nothing
Expected Results:
Should paste clipboard contents into message window
Tested version combinations:
Office 10.0 & Thunderbird 0.7.3
Office 10.1.4 & Thunderbird 0.7.3
Office 10.1.4 & Thunderbird 0.7+ (20040821)
It is not added even if it Drags files other than MS product, for example, a PDF
file etc., to body.
Mac OS X 10.3.5
version 0.7+ (20040821)
| Reporter | ||
Comment 2•21 years ago
|
||
(In reply to comment #1)
> It is not added even if it Drags files other than MS product, for example, a PDF
> file etc., to body.
I think that that qualifies as a different bug. I tried it myself and instead of the file being attached
(like Mail does) I ended up with a link to the file. This bug report is for pasting content, not attaching
files.
| Reporter | ||
Comment 4•21 years ago
|
||
(In reply to comment #3)
> duplicate 239817 or 245387 ?
no.
Comment 5•21 years ago
|
||
Identical problem on both new g-5 iMac and new G-4 eMac .8 Tbird, 10.3 OS X,
Office X. Can't copy paste or drag drop from Word to the message pane. Can copy
paste from Word to other programs can copy paste from other programs to Tbird.
Can copy paste in two steps; drag to text edit for example, then drag to tbird.
Comment 6•21 years ago
|
||
Paste function does not work when I try to copy and paste to a document I am drafting to email. I am
using the most recent version of Mac 10.3
Comment 7•21 years ago
|
||
*** Bug 265480 has been marked as a duplicate of this bug. ***
Comment 8•21 years ago
|
||
Confirming, I see this on today's nightly. This was discussed at the office
today, and the issue was raised that you are able to copy/paste Word text into
Mozilla mail and preserve the formatting.
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Updated•21 years ago
|
Flags: blocking-aviary1.0mac+
Target Milestone: --- → Thunderbird1.0
Comment 9•21 years ago
|
||
*** Bug 267042 has been marked as a duplicate of this bug. ***
Comment 10•21 years ago
|
||
I'd like to confirm this behavior. When pasting directly from Word, nothing
happens. When dragging from TextEdit into Thunderbird's compose window, the text
is added but all formatting is lost.
Comment 11•21 years ago
|
||
could someone try to reproduce this on Windows?
Comment 12•21 years ago
|
||
this works for me on the latest win32 tbird build 20041119. Using MS Word 2003,
both copy/paste and drag/drop formatted text was transferred from word to the
body of the compose window with formatting in tact.
| Assignee | ||
Comment 13•21 years ago
|
||
| Assignee | ||
Comment 14•21 years ago
|
||
Comment on attachment 166875 [details] [diff] [review]
the fix
On the mac, we were trying to paste the word clipboard text as a native image.
Since pasting clipboard images is only supported on windows, this failed. The
fix is to only register the clipboard image flavors for pasting on Windows only
since that's the only platform we support copy and paste of clipboard images.
Attachment #166875 -
Flags: superreview?(bienvenu)
Comment 15•21 years ago
|
||
Comment on attachment 166875 [details] [diff] [review]
the fix
is there a bug open to add support for this on the mac and linux?
Attachment #166875 -
Flags: superreview?(bienvenu) → superreview+
| Assignee | ||
Comment 16•21 years ago
|
||
fixed
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment 17•21 years ago
|
||
> is there a bug open to add support for this on the mac and linux?
since there aren't MS-Office apps available on linux, what should be tested in
that case?
fwiw, I tried pasting something I copied (styled text) from a document in Open
Office's Writer, and that worked.
Comment 18•21 years ago
|
||
this works for me now: I can copy and paste styled text from Word into a mail
compose window --even though the styles are stripped out. vrfy'd fixed with
2004120102-0.9 on mac os x 10.3.6.
Status: RESOLVED → VERIFIED
Summary: Unable to copy from MS Word and paste into message compose body with formatting → [Mac] Unable to copy from MS Word and paste into message compose body with formatting
You need to log in
before you can comment on or make changes to this bug.
Description
•