Bug #256455 --> Unable to copy from MS Word and paste into message compose body with formatting because we were incorrectly registering ourselves to handle native clipboard image formats for non Windows platforms.

sr=bienvenu